font awesome added

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <li class="nav__item"><a href="#work">Work</a></li>
         </ul>
         <div class="nav__list__social">
-            <a href="https://www.facebook.com/aBu.mOAlliM" class="facebook"><i class="brandico-facebook-rect"></i></a>
-            <a href="https://www.linkedin.com/in/abubakker-moallim-17a23380/" class="linkedin"><i class="brandico-linkedin-rect"></i></a>
-            <a href="https://github.com/abumoallim/" class="github"><i class="brandico-github"></i></a>
+            <a href="https://www.facebook.com/aBu.mOAlliM" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/abubakker-moallim-17a23380/" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/abumoallim/" class="github"><i class="fab fa-github"></i></a>
             <a href="https://stackoverflow.com/users/9113735/abubakker-moallim" class="stackoverflow"><i class="fab fa-stack-overflow"></i></a>
         </div>
     </nav>
@@ -87,9 +87,9 @@
     <main class="main-container">
         <div class="slideshow-container">
             <div class="icon-bar">
-                <a href="https://www.facebook.com/aBu.mOAlliM" class="facebook"><i class="brandico-facebook-rect"></i></a>
-                <a href="https://www.linkedin.com/in/abubakker-moallim-17a23380/" class="linkedin"><i class="brandico-linkedin-rect"></i></a>
-                <a href="https://github.com/abumoallim/" class="github"><i class="brandico-github"></i></a>
+                <a href="https://www.facebook.com/aBu.mOAlliM" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com/in/abubakker-moallim-17a23380/" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/abumoallim/" class="github"><i class="fab fa-github"></i></a>
                 <a href="https://stackoverflow.com/users/9113735/abubakker-moallim" class="stackoverflow"><i class="fab fa-stack-overflow"></i></a>
 
             </div>
