--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
             <h2 class="about-us-heading">About Me</h2>
             <img src="images/my_image-small.jpg" class="about-us-image rotate270" alt="an image of mine">
             <p class="about-us-content">A forward-thinking developer offering around 2 years of experience in building, integrating, testing and supporting
-                Android applications for mobile and tablet devices on the Android platform. Also did work with backend languages
-                like javascript and python.
+                Android applications for mobile and tablet devices on the Android platform.
             </p>
         </article>
 
